syntax = "proto3";

package echo;

service Echo {
  rpc EchoString (EchoRequest) returns (EchoResponse);
}

message EchoRequest {
  string message = 1;
}

message EchoResponse {
  string message = 1;
}
